--- a/07.SourceCode/P8_TestWCFService/P8_TestWCFService/MainWindow.xaml
+++ b/07.SourceCode/P8_TestWCFService/P8_TestWCFService/MainWindow.xaml
@@ -1,12 +1,11 @@
 ﻿<Window x:Class="P8_TestWCFService.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Test WCF Service" Height="214" Width="688" Icon="/P8_TestWCFService;component/Images/SplashScreen.png">
-    <Grid Height="160" Width="673">
-        <Button Content="Call" Height="26" HorizontalAlignment="Left" Margin="566,51,0,0" Name="btnCallService" VerticalAlignment="Top" Width="88" Click="btnCallService_Click" />
-        <Label Height="63" HorizontalAlignment="Left" Margin="12,83,0,0" Name="lblMessage" VerticalAlignment="Top" Width="642" BorderThickness="1" BorderBrush="#FF51679A" Background="#FFECF2E6" />
-        <TextBox Height="34" HorizontalAlignment="Left" Margin="12,11,0,0" Name="txtContent" 
-                 VerticalAlignment="Top" Width="642" 
-                 Text="0932130483*12345*500000*0939146267*500000" />
+        Title="Test WCF Service" Height="300" Width="763" Icon="/P8_TestWCFService;component/Images/SplashScreen.png">
+    <Grid Margin="2,2,2,2" >
+        <Button Content="Call" Height="26" HorizontalAlignment="Right" Margin="0,51,19,0" Name="btnCallService" VerticalAlignment="Top" Width="88" Click="btnCallService_Click" />
+        <TextBox Height="63" Margin="12,83,19,0" Name="txtMessage" VerticalAlignment="Top" BorderThickness="1" BorderBrush="#FF51679A" Background="#FFECF2E6" />
+        <TextBox Height="34" Margin="12,11,19,0" Name="txtContent" 
+                 VerticalAlignment="Top" Text="0932130483*12345*500000*0939146267*500000" />
     </Grid>
 </Window>
