--- a/trunk/07.SourceCode/P8_EvaluateExpression/P8_EvaluateExpression/MainWindow.xaml
+++ b/trunk/07.SourceCode/P8_EvaluateExpression/P8_EvaluateExpression/MainWindow.xaml
@@ -1,8 +1,12 @@
 ﻿<Window x:Class="P8_EvaluateExpression.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="350" Width="525">
+        Title="MainWindow" Height="195" Width="525">
     <Grid>
-        
+        <TextBox Height="28" Margin="12,26,12,0" Name="txtBieuThuc" VerticalAlignment="Top" Text="(10 - (3*2  ^2    + 3*2^3) - 7)^(5%3)" />
+        <TextBox Height="23" HorizontalAlignment="Left" Margin="12,60,0,0" Name="txtKetQua" VerticalAlignment="Top" Width="118" />
+        <Button Content="Tính" Height="24" Margin="0,59,12,0" Name="btnCal" VerticalAlignment="Top" Click="btnCal_Click" HorizontalAlignment="Right" Width="83" />
+        <TextBox Height="24" Margin="14,94,12,0" Name="textBox1" VerticalAlignment="Top" />
+        <Button Content="Tính Mã PCode từ XML" Height="22" Margin="0,125,12,0" Name="btnGenerateXML" VerticalAlignment="Top" HorizontalAlignment="Right" Width="199"  />
     </Grid>
 </Window>
