--- a/trunk/07.SourceCode/P2_MoneyPacificSite/P2_MoneyPacificSite/Views/Shared/Site.Master
+++ b/trunk/07.SourceCode/P2_MoneyPacificSite/P2_MoneyPacificSite/Views/Shared/Site.Master
@@ -33,6 +33,7 @@
         </div>
 
         <div id="main">
+            <%: Html.ActionLink("Send a mail", "SendMail", "Mail") %>
             <asp:ContentPlaceHolder ID="MainContent" runat="server" />
 
             <div id="footer">
