--- a/trunk/07.SourceCode/P4_MoneyPacificSite/P4_MoneyPacificSite/Views/Shared/StoreManager.Master
+++ b/trunk/07.SourceCode/P4_MoneyPacificSite/P4_MoneyPacificSite/Views/Shared/StoreManager.Master
@@ -35,29 +35,17 @@
                             </DynamicItemTemplate>
                             <Items>
                                 <asp:MenuItem Text="Home" Value="Home" NavigateUrl="~/Home"></asp:MenuItem>
-                                <asp:MenuItem Text="Pacific Code" Value="Pacific Code" NavigateUrl="~/PacificCode">
-                                    <asp:MenuItem Text="Detail" Value="Detail" NavigateUrl="~/PacificCode/ViewDetail"></asp:MenuItem>
-                                    <asp:MenuItem Text="Change Code" Value="Change Code" NavigateUrl="~/PacificCode/ChangeCode"></asp:MenuItem>
-                                    <asp:MenuItem Text="Send Money" Value="Send Money" NavigateUrl="~/PacificCode/SendMoney"></asp:MenuItem>
-                                    <asp:MenuItem Text="ReSend SMS" Value="Re Send SMS" NavigateUrl="~/PacificCode/SendSMS"></asp:MenuItem>
-                                    <asp:MenuItem Text="Browse" Value="Browse" NavigateUrl="~/PacificCode/Browse"></asp:MenuItem>
-                                </asp:MenuItem>
-                                <asp:MenuItem Text="Store" Value="Store" NavigateUrl="~/Store/">
-                                    <asp:MenuItem Text="Login" Value="Login" NavigateUrl="~/Account/Login/"></asp:MenuItem>
-                                    <asp:MenuItem Text="Register" Value="Register" NavigateUrl="~/Store/Register/"></asp:MenuItem>                                    
-                                </asp:MenuItem>
-                                <asp:MenuItem Text="Contact" Value="Contact"></asp:MenuItem>
-                                <asp:MenuItem Text="About" Value="About"></asp:MenuItem>
+                                <asp:MenuItem Text="Dashboard" Value="Dashboard" NavigateUrl="~/Store/Dashboard"></asp:MenuItem>
+                                <asp:MenuItem Text="Information" Value="Information" NavigateUrl="~/Store/Information"></asp:MenuItem>
+                                <asp:MenuItem Text="Security" Value="Security" NavigateUrl="~/Store/Security"></asp:MenuItem>
+                                <asp:MenuItem Text="Pacific Email" Value="Pacific Email" NavigateUrl="~/Mail/SendMail"></asp:MenuItem>
                             </Items>
                             <StaticHoverStyle BackColor="#0099CC" ForeColor="White" />
                             <StaticMenuItemStyle HorizontalPadding="5px" VerticalPadding="2px" />
                             <StaticSelectedStyle BackColor="#5D7B9D" />
                         </asp:Menu> 
-                        
-            
                     </div>
                 </div>
-            
         </div>
 
         <div id="main">
