--- a/07.SourceCode/P4_MoneyPacificSite/P4_MoneyPacificSite/Content/Site.css
+++ b/07.SourceCode/P4_MoneyPacificSite/P4_MoneyPacificSite/Content/Site.css
@@ -95,6 +95,7 @@ page width. Or, you can specify an exact pixel width. */
     margin-bottom: 0px;
     color: #000;
     padding: 0;
+    height:69px;
 }
 
 #header h1
@@ -136,10 +137,11 @@ ul#menu
     position: relative;
     margin: 0;
     text-align: right;
+    float:right;
 }
 
 ul#menu li
-{
+{	
     display: inline;
     list-style: none;
 }
