--- a/trunk/07.SourceCode/01.MVCSkill/F01_MoneyPacificUserRole/F01_MoneyPacificUserRole/Views/Shared/Site.Master
+++ b/trunk/07.SourceCode/01.MVCSkill/F01_MoneyPacificUserRole/F01_MoneyPacificUserRole/Views/Shared/Site.Master
@@ -22,6 +22,7 @@
             <div id="menucontainer">
             
                 <ul id="menu">              
+                    <li><%= Html.ActionLink("Load HTML", "LoadHtmlFromDB", "Account")%></li>
                     <li><%= Html.ActionLink("Create", "Create", "Role")%></li>
                     <li><%= Html.ActionLink("Home", "Index", "Home")%></li>
                     <li><%= Html.ActionLink("About", "About", "Home")%></li>
