--- a/trunk/07.SourceCode/F5_MoneyPacificSite/F5_MoneyPacificSite/Views/Shared/Admin.Master
+++ b/trunk/07.SourceCode/F5_MoneyPacificSite/F5_MoneyPacificSite/Views/Shared/Admin.Master
@@ -5,7 +5,9 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head id="Head1" runat="server">
     <title><asp:ContentPlaceHolder ID="TitleContent" runat="server" /></title>
+    
     <link href="../../Content/Site.css" rel="stylesheet" type="text/css" />
+    <link href="../../Content/thickbox.css" rel="stylesheet" type="text/css" />
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
 </head>
 
