--- a/trunk/07.SourceCode/F7_MoneyPacificSite/MoneyPacificSecurity/Views/Shared/Site.Master
+++ b/trunk/07.SourceCode/F7_MoneyPacificSite/MoneyPacificSecurity/Views/Shared/Site.Master
@@ -6,7 +6,7 @@
 <head id="Head1" runat="server">
     <title><asp:ContentPlaceHolder ID="TitleContent" runat="server" /></title>
     <%--<link href="../../Content/Site.css" rel="stylesheet" type="text/css" />--%>
-    <link href="../../Content/css.css" rel="stylesheet" type="text/css" />
+    <link href="../../Content/css.css" rel="stylesheet" type="text/css" />    
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
 </head>
 
@@ -16,7 +16,7 @@
         <div id="header">
             <div id="header-left">
                 <div id="logo">
-                    <img src="../../Content/Images/logo.gif"/>
+                    <img alt="" src="../../Content/Images/logo.gif"/>
                 </div>
                 <div id="webmerchant">
                     <p>
